Version 2.02.91 -
===================================
  Set status in _fsadm_cmd() for error path.
  Add missing deps for lvm2api for rebuild when lvm-internal is changed.
  Fix resource leaks for failing allocation of formats (lvm1/2,pool).
  Release allocated resources in error path for composite_filter_create().
  Do not use lstat() results when failed in _rm_link().
  Remove a "waiting for another thread" log message from dmeventd plugins.

Version 2.02.90 - 1st February 2012
===================================
  sync_local_dev_names before (re)activating mirror log for initialisation.
  Disable partial activation for thin LVs and LVs with all missing segments.
  Do not print warning for pv_min_size between 512KB and 2MB.
  Clean up systemd unit ordering and requirements.
  Fix lcov reports when srcdir != builddir.
  Allow ALLOC_NORMAL to track reserved extents for log and data on same PV.
  Automatically detect whether corosync clvmd needs to use confdb or cmap.
  Fix data% report for thin volume used as origin for non-thin snapshot.

Version 2.02.89 - 26th January 2012
===================================
  Add missing check for uname result in clvmd TEST processing.
  Fix memleak in target_version() error path (unsupported LIST_VERSIONS).
  Limit data_alignment and data_alignment_offset to 32bit values.
  Check for correctness of uint64 dev_size value in format_text.
  Thin pools have segment fields thin_count, zero, transaction_id.
  Add data_percent and metadata_percent for thin pools to lvs -v.
  Add data_lv & metadata_lv fields to lvs for thin pools.
  Add data_percent & pool_lv fields to lvs for thin volumes.
  Rename origin_only parm to use_layer for lv_info and use with thin LVs.
  Add lv_thin_pool_transaction_id to read the transaction_id value.
  Use {suspend,resume}_origin_only when up-converting RAID, as mirrors do.
  Always add RAID metadata LVs to deptree (even when origin_only is set).